--- a/manifest.yml
+++ b/manifest.yml
@@ -19,9 +19,9 @@ url_to_dependency_map:
 
 dependencies:
   - name: node
-    version: 0.10.43
-    uri: https://pivotal-buildpacks.s3.amazonaws.com/concourse-binaries/node/node-0.10.43-linux-x64.tgz
-    md5: 10eb71941ea92ac61aa470396a590ddd
+    version: 14.16.1
+    uri: https://nodejs.org/dist/v14.16.1/node-v14.16.1-linux-x64.tar.xz
+    md5: 98ce7e4e5f53c53fdbbc30331fc0e229
     cf_stacks:
       - cflinuxfs3
   - name: node
