--- a/manifest.yml
+++ b/manifest.yml
@@ -20,8 +20,8 @@ url_to_dependency_map:
 dependencies:
   - name: node
     version: 14.16.1
-    uri: https://nodejs.org/dist/v14.16.1/node-v14.16.1-linux-x64.tar.xz
-    md5: 98ce7e4e5f53c53fdbbc30331fc0e229
+    uri: https://nodejs.org/dist/v14.16.1/node-v14.16.1-linux-x64.tar.gz
+    md5: d7cf80c3bf90c3ab70558d9f4ed43a8e
     cf_stacks:
       - cflinuxfs3
   - name: node
